--- a/_includes/social-links.html
+++ b/_includes/social-links.html
@@ -23,7 +23,7 @@
   {% if site.keybase %}<li><a class="social-btn" href="https://keybase.io/{{ site.keybase }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-key"></i></a></li>{% endif %}
   {% if site.xmpp %}<li><a class="social-btn" href="xmpp:{{ site.xmpp }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-lightbulb-o"></i></a></li>{% endif %}
   {% if site.hackernews %}<li><a class="social-btn" href="https://news.ycombinator.com/user?id={{ site.hackernews }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-hacker-news"></i></a></li>{% endif %}
-  {% if site.tencent %}<li><a class="social-btn" href="https://user.qzone.qq.com/user?id={{ site.tencent }}/main" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-qq"></i></a></li>{% endif %}
+  {% if site.tencent %}<li><a class="social-btn" href="https://user.qzone.qq.com/{{ site.tencent }}/main" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-qq"></i></a></li>{% endif %}
 
   
 </ul>
