--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -46,7 +46,7 @@ layout: compress
             // gitalk的主要参数
             clientID: `5f082d4bb4bb247e049f`,
             clientSecret: `aa2a9354fcde9ff9a6b46f0ecb71685333528ce7`,
-            repo: `biuy.github.inner-post`,
+            repo: `biuy.github.io`,
             owner: 'biuy',
             admin: ['biuy'],
             id: 'location.pathname',
@@ -56,7 +56,7 @@ layout: compress
         </script> 
         <!-- Gitalk end -->
 
-    
+
   </div>
   {% include overlay.html %}
   {% include scripts.html %}
