--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -50,11 +50,11 @@ layout: compress
             // gitalk的主要参数
             clientID: `5f082d4bb4bb247e049f`,
             clientSecret: `aa2a9354fcde9ff9a6b46f0ecb71685333528ce7`,
-            repo: `biuy.github.inner-post`,
+            repo: `biuy.github.io`,
             owner: 'biuy',
             admin: ['biuy'],
             id: 'location.pathname',
-            
+            distractionFreeMode: false
             });
             gitalk.render('gitalk-container');
         </script> 
