--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -39,7 +39,7 @@ layout: compress
         <br>
         {% include share.html %}
         {% include page-pagination.html %}
-        {% include gitalk.html %}
+        {% include gitalk.html %}git?
       </div>
     </div>
     {% include scripts.html %}
