--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -39,7 +39,8 @@ layout: compress
         <br>
         {% include share.html %}
         {% include page-pagination.html %}
-        {% include gitalk.html %}git?
+        {% include gitalk.html %}
+        <div id="gitalk-container"></div>      git?
       </div>
     </div>
     {% include scripts.html %}
