--- a/_layouts/gitalk.html
+++ b/_layouts/gitalk.html
@@ -12,7 +12,7 @@
             repo: `biuy.github.io`,
             owner: 'biuy',
             admin: ['biuy'],
-            id: 'location.pathname',
+            id: location.pathname,
             distractionFreeMode: false
             });
             gitalk.render('gitalk-container');
