--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -41,7 +41,7 @@ layout: compress
         {% include page-pagination.html %}
         {% include gitalk.html %}
         <div id="gitalk-container"></div>     
-        git?
+        git2
       </div>
     </div>
     {% include scripts.html %}
