--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -40,7 +40,7 @@ layout: compress
         {% include share.html %}
         {% include page-pagination.html %}
         {% include gitalk.html %}
-        <div id="gitalk-container"></div>      git?
+        <div id="gitalk-container"></div>
       </div>
     </div>
     {% include scripts.html %}
