--- a/_includes/head.html
+++ b/_includes/head.html
@@ -44,6 +44,8 @@
   <link rel="shortcut icon" href="{{ site.url }}/favicon.ico" />
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="{{ site.url }}/assets/css/main.css">
+  <!-- gitalk -->
+  <link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
   <!-- Left Block Image for Posts -->
   {% if page.image %}
   {% capture image %}{{ page.image }}{% endcapture %}
