--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -43,7 +43,23 @@ layout: compress
         git3
       </div>
     </div>
-    {% include gitalk.html %} 
+     <!-- Gitalk 评论 start  -->
+
+        <!-- Link Gitalk 的支持文件  -->
+        <script src="https://unpkg.com/gitalk/dist/gitalk.min.js"></script> 
+        <script type="text/javascript">
+            var gitalk = new Gitalk({
+            clientID: `5f082d4bb4bb247e049f`,
+            clientSecret: `aa2a9354fcde9ff9a6b46f0ecb71685333528ce7`,
+            repo: `biuy.github.io`,
+            owner: 'biuy',
+            admin: ['biuy'],
+            id: location.pathname,
+            distractionFreeMode: false
+            });
+            gitalk.render('gitalk-container');
+        </script>
+        <!-- Gitalk end -->
     {% include scripts.html %}
     {% include overlay.html %}
 </body>
