--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -47,7 +47,7 @@ layout: compress
 
         <!-- Link Gitalk 的支持文件  -->
         <script src="https://unpkg.com/gitalk/dist/gitalk.min.js"></script> 
-        <script src="{{ site.baseurl }}/js/md5.min.js"></script>
+        <script src="{{ site.baseurl }}/assets/js/md5.min.js"></script>
         <script type="text/javascript">
             var gitalk = new Gitalk({
             clientID: `5f082d4bb4bb247e049f`,
