--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -48,7 +48,7 @@ layout: compress
         <!-- Link Gitalk 的支持文件  -->
         <script src="https://unpkg.com/gitalk/dist/gitalk.min.js"></script> 
         <script src="{{ site.url }}/assets/js/md5.min.js"></script>
-        <script type="text/javascript" src="{{ site.url }}/assets/js/md5.min.js">
+        <script type="text/javascript">
             var gitalk = new Gitalk({
             clientID: `5f082d4bb4bb247e049f`,
             clientSecret: `aa2a9354fcde9ff9a6b46f0ecb71685333528ce7`,
