--- a/_includes/overlay.html
+++ b/_includes/overlay.html
@@ -32,8 +32,8 @@
     <img src="/search/img/cb-search.png"  id="cb-search-btn"  title="双击ctrl试一下"/>
 </div>
 
-<link rel="stylesheet" href="{{ "/search/css/cb-search.css" | prepend: site.baseurl }}">
+<link rel="stylesheet" href="{{ "/search/css/cb-search.css" | prepend: site.url }}">
 
-<script src="{{ "/search/js/bootstrap3-typeahead.min.js" | prepend: site.baseurl }}"></script>
-<script src="{{ "/search/js/cb-search.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/search/js/bootstrap3-typeahead.min.js" | prepend: site.url }}"></script>
+<script src="{{ "/search/js/cb-search.js" | prepend: site.url }}"></script>
 
