--- a/_includes/overlay.html
+++ b/_includes/overlay.html
@@ -34,6 +34,7 @@
 
 <link rel="stylesheet" href="{{ "/search/css/cb-search.css" | prepend: site.url }}">
 
-<script src="{{ "/search/js/bootstrap3-typeahead.min.js" | prepend: site.url }}"></script>
-<script src="{{ "/search/js/cb-search.js" | prepend: site.url }}"></script>
+<script src="{{ site.url }}/search/js/bootstrap3-typeahead.min.js"></script>
+
+<script src="{{ site.url }}/search/js/cb-search.js "></script>
 
