--- a/assets/_sass/_site.scss
+++ b/assets/_sass/_site.scss
@@ -302,6 +302,7 @@ canvas {
   margin: 0 auto;
   h1,
   h2 {
+    font-weight: 200;
     font-size: 30px;
     position: relative;
     margin-top: 0;
@@ -391,7 +392,7 @@ canvas {
 .main-info {
   color: $white;
   h1 {
-    font-weight: bold;
+    font-weight: lighter;
     text-transform: uppercase;
     letter-spacing: 1px;
   }
