--- a/assets/_sass/_site.scss
+++ b/assets/_sass/_site.scss
@@ -293,6 +293,12 @@ canvas {
   color: transparent;
   text-shadow: none;
 }
+.a {
+  color:#4dbe7a;
+}
+.a:hover {
+  color:#4dbe7a;
+}
 
 .main-info,
 .about-info {
