Revert "Update _site.scss"
This reverts commit 8bf92263a02fdd81e83698124394e07dceafcb53.

--- a/assets/_sass/_site.scss
+++ b/assets/_sass/_site.scss
@@ -302,7 +302,6 @@ canvas {
   margin: 0 auto;
   h1,
   h2 {
-    font-weight: 200;
     font-size: 30px;
     position: relative;
     margin-top: 0;
@@ -392,7 +391,7 @@ canvas {
 .main-info {
   color: $white;
   h1 {
-    font-weight: lighter;
+    font-weight: bold;
     text-transform: uppercase;
     letter-spacing: 1px;
   }
