--- a/_includes/head.html
+++ b/_includes/head.html
@@ -45,6 +45,7 @@
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="{{ site.url }}/assets/css/main.css">
   <link rel="stylesheet" type="text/css" href="{{ site.url }}/assets/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="{{ site.url }}/assets/css/blog.css">
   <!-- gitalk -->
   <link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
   <!-- Left Block Image for Posts -->
