--- a/assets/_sass/_site.scss
+++ b/assets/_sass/_site.scss
@@ -548,7 +548,7 @@ canvas {
   h4,
   h5,
   h6 {
-    font-weight: lighter;
+    font-weight: normal;
     color: rgba($overlay-color, 0.7);
   }
   p {
