--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -37,15 +37,17 @@ layout: compress
         <div class="date-highlight">{% if page.date %}{{ page.date | date: '%d %b %Y' }}{% else %}&#x2756;{% endif %}</div>
 
         {% if site.leancloud.enable %}
-        <div>
-          <span id="{{ page.url }}" class="leancloud_visitors" data-flag-title="{{ page.title }}">
-            Visited:
-            <a href="#"><span class="leancloud-visitors-count"></span>次</a>
-          </span>
-        </div>
+        <span id="{{ page.url }}" class="leancloud_visitors meta_data_item" data-flag-title="{{ page.title }}">
+             <span class="post-meta-item-icon">
+               <span class="octicon octicon-eye"></span> 
+             </span>
+             <span class="old-visitors-count" style="display: none;"></span>
+             <span class="leancloud-visitors-count"></span>
+             <span class="post-meta-item-text">次浏览</span>
+        </span>
         {% endif %}
 
-        
+
         {{ content }}
         <br>         
         {% include share.html %}
