--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -62,6 +62,7 @@
 
     //仅根据url和title查出当前访问次数，不做+1操作
     function showCount(Counter) {
+      alert("???");
       var $visitors = $(".leancloud_visitors");
       var url = $visitors.attr('id').trim();
       var title = $visitors.attr('data-flag-title').trim();
