--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -36,7 +36,12 @@ layout: compress
       <div class="inner-post content">
         <div class="date-highlight">{% if page.date %}{{ page.date | date: '%d %b %Y' }}{% else %}&#x2756;{% endif %}</div>
 
-        
+        {% if site.leancloud.enable %}
+        <span id="{{ site.url }}" class="leancloud_visitors meta_data_item" data-flag-title="{{ site.title }}">
+             <span class="leancloud-visitors-count"></span>
+             <span class="post-meta-item-text">次浏览</span>
+        </span>
+        {% endif %}
 
 
         {{ content }}
