--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -42,6 +42,7 @@ layout: compress
              <span class="post-meta-item-text">次浏览</span>
         </span>
         {% endif %}
+        <link rel="stylesheet" type="text/css" href="{{ site.url }}/assets/css/misty-theme-macos.css">
 
 
         {{ content }}
