--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -12,9 +12,11 @@ a:hover {
 }
 blockquote {
 	border-left: 5px dotted #399f62;
-	font-style: "SF UI Text";
+	font-style: normal;
 }
 code {
 	color: black;
-	background-color: #e2f0ff;
+}
+p>code, a>code, li>code, figcaption>code, td>code {
+    background-color: #e2f0ff;
 }
