--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -1,8 +1,11 @@
 .h1,.h2,.h3,h1,h2,h3 {
 	font-weight: 200;
 }
+html {
+    font-size: 16px;
+}
 body {
-	color: black;
+	font-weight: 300;
 }
 a {
   color:#399f62;
