--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -1,5 +1,5 @@
 .h1,.h2,.h3,h1,h2,h3 {
-	font-weight: 300;
+	font-weight: 200;
 }
 a {
   color:#399f62;
@@ -13,6 +13,7 @@ blockquote {
 }
 code {
 	color: black;
+	font-weight: bold;
 }
 p>code, a>code, li>code, figcaption>code, td>code {
     background-color: #e2f0ff;
