--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,43 +5,64 @@ layout: compress
 <!DOCTYPE html>
 <html>
 {% include head.html %}
+
 <body id="posts" class="inner-post-page">
 
-    <div class="block-left">
-      <div class="content">
-        <a href="{{ site.url }}" class="logo"><img src="{{ site.url }}/images/{{ site.logo }}"></a>
-        <div class="post-title-section">
-          <div class="section-line">Posts <em>/</em></div>
-          <h1 class="section-title">{{ page.title | markdownify | remove: "<p>" | remove: "</p>" }}</h1>
-          <ul class="tags">
-            {% for tag in page.tags %}
-              <li><a href="{{ site.url }}/tags#{{ tag }}">{{ tag }}</a></li>
-              {% unless forloop.last %}
-              {% endunless %}
-            {% endfor %}
-          </ul>
-          <div class="section-line reverse"><a href="{{ site.url}}/posts">Back to posts</a> <em>/</em></div>
-        </div>
+  <div class="block-left">
+    <div class="content">
+      <a href="{{ site.url }}" class="logo"><img src="{{ site.url }}/images/{{ site.logo }}"></a>
+      <div class="post-title-section">
+        <div class="section-line">Posts <em>/</em></div>
+        <h1 class="section-title">{{ page.title | markdownify | remove: "<p>" | remove: "</p>" }}</h1>
+        <ul class="tags">
+          {% for tag in page.tags %}
+          <li><a href="{{ site.url }}/tags#{{ tag }}">{{ tag }}</a></li>
+          {% unless forloop.last %}
+          {% endunless %}
+          {% endfor %}
+        </ul>
+        <div class="section-line reverse"><a href="{{ site.url}}/posts">Back to posts</a> <em>/</em></div>
+      </div>
+    </div>
+  </div>
+
+  <div class="block-right">
+    <div class="share-buttons">
+      {% include share.html %}
+    </div>
+    <a href="../posts.html" title="posts" class="posts-menu-icon"></a>
+    <a title="projects" class="projects-menu-icon">
+      <span></span>
+    </a>
+    <div class="inner-post content">
+      <div class="date-highlight">{% if page.date %}{{ page.date | date: '%d %b %Y' }}{% else %}&#x2756;{% endif %}
+      </div>
+      {{ content }}
+      <br>
+      {% include share.html %}
+      {% include page-pagination.html %}
+    </div>
+
+    <div class="cb-search-tool" style="position: fixed; top: 0px ; bottom: 0px; left: 0px; right:  0px;
+opacity: 0.95; background-color: #111111; z-index: 9999; display: none;">
+      <input type="text" class="form-control cb-search-content" id="cb-search-content"
+        style="position: fixed; top: 60px" placeholder="文章标题 日期 标签">
+
+      <div style="position: fixed; top: 16px; right: 16px;">
+        <img src="/search/img/cb-close.png" id="cb-close-btn" />
       </div>
     </div>
 
-    <div class="block-right">
-      <div class="share-buttons">
-        {% include share.html %}
-      </div>
-      <a href="../posts.html" title="posts" class="posts-menu-icon"></a>
-      <a title="projects" class="projects-menu-icon">
-        <span></span>
-      </a>
-      <div class="inner-post content">
-        <div class="date-highlight">{% if page.date %}{{ page.date | date: '%d %b %Y' }}{% else %}&#x2756;{% endif %}</div>
-        {{ content }}
-        <br>
-        {% include share.html %}
-        {% include page-pagination.html %}    
-      </div>
+    <div style="position: fixed; right: 16px; bottom: 20px;">
+      <img src="/search/img/cb-search.png" id="cb-search-btn" title="双击ctrl试一下" />
     </div>
-    {% include scripts.html %}
-    {% include overlay.html %}
+
+    <link rel="stylesheet" href="{{ " /search/css/cb-search.css" | prepend: site.url }}">
+
+  </div>
+
+  {% include scripts.html %}
+  {% include overlay.html %}
 </body>
+
 </html>
