--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,6 +1,6 @@
 <!-- JS -->
 <script src="{{ site.url }}/assets/js/main.min.js"></script>
-
+<script src="{{ site.url }}/assets/js/src/scripts.js"></script>
 {% if site.google-analytics %}
 <!-- Asynchronous Google Analytics snippet -->
 <script>
