--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -4,13 +4,11 @@
 {% if site.google-analytics %}
 <!-- Asynchronous Google Analytics snippet -->
 <script>
-  (function (i, s, o, g, r, a, m) {
-    i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-      (i[r].q = i[r].q || []).push(arguments)
-    }, i[r].l = 1 * new Date(); a = s.createElement(o),
-      m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-  })(window, document, 'script', '/assets/js/analytics.js', 'ga');
-  ga('create', '{{ site.google-analytics }}', 'auto');
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','/assets/js/analytics.js','ga');
+  ga('create', '{{ site.google-analytics }}', 'auto');  
   ga('require', 'linkid', 'linkid.js');
   ga('send', 'pageview');
 </script>
@@ -18,6 +16,23 @@
 
 
 
+<div class="cb-search-tool" style="position: fixed; top: 0px ; bottom: 0px; left: 0px; right:  0px;
+      opacity: 0.95; background-color: #111111; z-index: 9999; display: none;">
+    <input type="text" class="form-control cb-search-content" id="cb-search-content" style="position: fixed; top: 60px" placeholder="文章标题 日期 标签" >
+
+    <div style="position: fixed; top: 16px; right: 16px;">
+        <img src="/search/img/cb-close.png"  id="cb-close-btn"/>
+    </div>
+</div>
+
+<div style="position: fixed; right: 16px; bottom: 20px;">
+    <img src="/search/img/cb-search.png"  id="cb-search-btn"  title="双击ctrl试一下"/>
+</div>
+
+<link rel="stylesheet" href="{{ "/search/css/cb-search.css" | prepend: site.url }}">
+
 <script src="{{ site.url }}/search/js/bootstrap3-typeahead.min.js"></script>
 
 <script src="{{ site.url }}/search/js/cb-search.js "></script>
+
+
