--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,6 +5,7 @@ layout: compress
 <!DOCTYPE html>
 <html>
 {% include head.html %}
+
 <body id="homepage">
 
   <div class="block-left">
@@ -38,6 +39,9 @@ layout: compress
   </div>
   {% include overlay.html %}
   {% include scripts.html %}
+  {% include search.html %}
+
   <script src="{{ site.url }}/assets/js/canvas.js"></script>
 </body>
+
 </html>
