--- a/_includes/search.html
+++ b/_includes/search.html
@@ -12,8 +12,9 @@
     <img src="/search/img/cb-search.png" id="cb-search-btn" title="双击ctrl试一下" />
 </div>
 
-<link rel="stylesheet" href="{{ " /search/css/cb-search.css" | prepend: site.baseurl }}">
-
+<link rel="stylesheet" href="{{ " /search/css/cb-search.css" | prepend: site.url }}">
+<!-- jQuery -->
+<script src="//cdn.bootcss.com/jquery/2.2.2/jquery.min.js"></script>
 <script src="{{ site.url }}/search/js/bootstrap3-typeahead.min.js"></script>
 
 <script src="{{ site.url }}/search/js/cb-search.js "></script>
