--- a/_includes/search.html
+++ b/_includes/search.html
@@ -12,7 +12,7 @@
     <img src="/search/img/cb-search.png" id="cb-search-btn" title="双击ctrl试一下" />
 </div>
 
-<link rel="stylesheet" href="{{ " /search/css/cb-search.css" | prepend: site.url }}">
+<link rel="stylesheet" href="{{ site.url }}/search/css/cb-search.css">
 
 <script src="{{ site.url }}/search/js/bootstrap3-typeahead.min.js"></script>
 
